# libre_sudoku

./: Cargo.toml  README.md
lib/src/: board.rs  cell.rs  difficulty.rs  group.rs  lib.rs  solve.rs  solved_board.rs  solved_group.rs
lib/src/board/: mod.rs
lib/src/board/operation/: mirror_horizontal.rs  mirror_vertical.rs  mod.rs  offset.rs  offset_group_col_1.rs  offset_group_col_2.rs  offset_group_row_1.rs  offset_group_row_2.rs  permute_group_col_1_2.rs  permute_group_col_1_3.rs  permute_group_col_2_3.rs  permute_group_row_1_2.rs  permute_group_row_1_3.rs  permute_group_row_2_3.rs  rotate_180.rs  rotate_270.rs  rotate_90.rs
lib/src/generate/: mod.rs
lib/src/possibilities/: mod.rs  test_cell_possibilities.rs  test_group_possibilities.rs
lib/src/solve/: brute_force.rs  logical.rs  mod.rs
lib/src/strategy/: last_empty_in_group.rs  mod.rs  only_possibility.rs
src/: board.rs  cell.rs  group.rs  lib.rs  main.rs  possibilities.rs  solve.rs  strategy.rs
src/possibilities/: cell.rs  mod.rs  test_cell.rs  test_group_possibilities.rs
src/strategy/: last_empty_in_group.rs  mod.rs  only_possibility.rs
ui/: Cargo.toml
ui/src/: lib.rs
web_backend/: Cargo.toml  build.sh
web_backend/src/: lib.rs
web_frontend/: package.json  pnpm-lock.yaml  vite.config.ts
web_frontend/src/routes/: +page.svelte
